Updated Projects to Coming Soon

--- a/index.html
+++ b/index.html
@@ -138,14 +138,14 @@
         <!-- Project 1 -->
         <article class="project-card neon-outline">
           <div class="project-media">
-            <img src="img/maze.png" alt="Maze Art">
+            <img src="img/default_project.jpg" alt="Maze Art">
           </div>
           <div class="project-body">
             <div class="project-title">
-              <h3>2D Maze Art — Unity</h3>
-              <div class="muted">2024</div>
+              <h3>Coming Soon</h3>
+              <div class="muted">2025</div>
             </div>
-            <p class="muted" style="margin-top:8px">A 2D generative maze artwork built in Unity. Explores procedural generation and shader effects.</p>
+            <p class="muted" style="margin-top:8px">A new creative project is on the way. Stay tuned for updates!</p>
             <div class="tags">
               <span class="tag">Unity</span>
               <span class="tag">C#</span>
@@ -161,14 +161,14 @@
         <!-- Project 2 -->
         <article class="project-card neon-outline">
           <div class="project-media">
-            <img src="img/maze3.png" alt="Website Design">
+            <img src="img/default_project.jpg" alt="Website Design">
           </div>
           <div class="project-body">
             <div class="project-title">
-              <h3>Website Design — UI/UX</h3>
-              <div class="muted">2024</div>
+              <h3>Coming Soon</h3>
+              <div class="muted">2025</div>
             </div>
-            <p class="muted" style="margin-top:8px">Landing pages and responsive designs created with Figma/Canva and prototyped in HTML/CSS.</p>
+            <p class="muted" style="margin-top:8px">A new creative project is on the way. Stay tuned for updates!</p>
             <div class="tags">
               <span class="tag">HTML</span>
               <span class="tag">CSS</span>
@@ -184,14 +184,14 @@
         <!-- Project 3 -->
         <article class="project-card neon-outline">
           <div class="project-media">
-            <img src="img/maze6.png" alt="Shaft Support">
+            <img src="img/default_project.jpg" alt="Shaft Support">
           </div>
           <div class="project-body">
             <div class="project-title">
-              <h3>Mechanical Drawing — AutoCAD</h3>
-              <div class="muted">2023</div>
+              <h3>Coming Soon</h3>
+              <div class="muted">2025</div>
             </div>
-            <p class="muted" style="margin-top:8px">Technical drawings for a shaft support assembly created in AutoCAD for an engineering course.</p>
+            <p class="muted" style="margin-top:8px">A new creative project is on the way. Stay tuned for updates!</p>
             <div class="tags">
               <span class="tag">AutoCAD</span>
               <span class="tag">Engineering</span>
@@ -206,14 +206,14 @@
         <!-- Project 4 -->
         <article class="project-card neon-outline">
           <div class="project-media">
-            <img src="img/maze4.png" alt="Terminal Hacker">
+            <img src="img/default_project.jpg" alt="Terminal Hacker">
           </div>
           <div class="project-body">
             <div class="project-title">
-              <h3>Terminal Hacker — Unity</h3>
-              <div class="muted">2024</div>
+              <h3>Coming Soon</h3>
+              <div class="muted">2025</div>
             </div>
-            <p class="muted" style="margin-top:8px">A terminal-styled mini-game built in Unity showcasing procedural text, UI, and player input handling.</p>
+            <p class="muted" style="margin-top:8px">A new creative project is on the way. Stay tuned for updates!</p>
             <div class="tags">
               <span class="tag">Unity</span>
               <span class="tag">C#</span>
