Added Bug Mart Project

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <div class="muted">kingsleypulan54@gmail.com</div>
         </div>
         <div style="width:100%;margin-top:12px;display:flex;gap:8px;justify-content:center">
+          <a class="icon-btn"href="files/resume-pulan.pdf" target="_blank"><i class='bx bx-file'></i> Resume</a>
           <a class="icon-btn" href="#contact"><i class='bx bx-mail-send'></i> Message</a>
-          <a class="icon-btn" href="#projects"><i class='bx bx-folder-open'></i> Projects</a>
         </div>
       </aside>
 
@@ -86,7 +86,7 @@
     <!-- Experience 1 -->
     <div style="background:var(--card);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)">
       <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:6px;">
-        <h3 style="margin:0;">Software Quality Assurance Tester — Yenprovement</h3>
+        <h3 style="margin:0;">Manual QA Tester — Yenprovement</h3>
         <div class="muted" style="white-space:nowrap;">October 2025</div>
       </div>
         <ul style="margin-top:10px; color:var(--muted); padding-left:20px;">
@@ -135,28 +135,32 @@
 
       <div class="projects-grid">
 
-        <!-- Project 1 -->
-        <article class="project-card neon-outline">
-          <div class="project-media">
-            <img src="img/default_project.jpg" alt="Maze Art">
-          </div>
-          <div class="project-body">
-            <div class="project-title">
-              <h3>Coming Soon</h3>
-              <div class="muted">2025</div>
-            </div>
-            <p class="muted" style="margin-top:8px">A new creative project is on the way. Stay tuned for updates!</p>
-            <div class="tags">
-              <span class="tag">Unity</span>
-              <span class="tag">C#</span>
-              <span class="tag">Shaders</span>
-            </div>
-            <div class="project-actions">
-              <a class="icon-btn" href="#" target="_blank"><i class='bx bx-link'></i> Live</a>
-              <a class="icon-btn" href="#" target="_blank"><i class='bx bxl-github'></i> Repo</a>
-            </div>
-          </div>
-        </article>
+<!-- Project: BuggyMart QA Testing -->
+<article class="project-card neon-outline">
+  <div class="project-media">
+    <img src="img/bugmart.png" alt="BuggyMart QA Project">
+  </div>
+  <div class="project-body">
+    <div class="project-title" style="margin-bottom: 25px;">
+      <h3>Manual Testing</h3>
+      <div class="muted">Oct 2025</div>
+    </div>
+    <p class="muted" style="margin-top:8px">
+      Applied QA fundamentals across the full testing lifecycle, created test cases, RTM, bug reports, and closure documents.
+      Conducted exploratory, functional, non-functional, and regression testing.
+    </p>
+    <div class="tags">
+      <span class="tag">Trello</span>
+      <span class="tag">Sheets</span>
+      <span class="tag">Docs</span>
+    </div>
+    <div class="project-actions">
+      <a class="icon-btn" href="https://drive.google.com/drive/folders/1xtSHwngQZ9V7ByDyE0y1j7iCxUFY9O4s?usp=sharing" target="_blank"><i class='bx bx-file'></i> Docs</a>
+      <a class="icon-btn" href="https://trello.com/invite/b/68f4b35b68eecbe14be00363/ATTI4395d42487a57b6e725ccc4dc81c05fe33882AAE/bug-tracker-bug-mart" target="_blank"><i class='bx bxl-trello'></i> Board</a>
+    </div>
+  </div>
+</article>
+
 
         <!-- Project 2 -->
         <article class="project-card neon-outline">
